@@ -18,7 +18,7 @@
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
   <property name="focus_on_map">True</property>
-  <signal name="destroy" handler="gtk_main_quit" last_modification_time="Mon, 06 Oct 2003 00:45:04 GMT"/>
+  <signal name="destroy" handler="main_quit" last_modification_time="Sat, 06 Aug 2005 20:26:30 GMT"/>
 
   <child>
     <widget class="GtkHBox" id="hbox1">
